updated font on small screen and nav bar

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
             <div class="about-content">
                 <div class="subtitle" id="let-me-introduce-myself">LET ME INTRODUCE MYSELF</div>
                 <h2>About me</h2>
-                <p>I'm a dreamer who dreams big and follows those dreams with unwavering commitment and dedication. My tech journey began with a love for sandbox games, where I discovered the joy of limitless possibilities and letting my creativity run free. It wasn't until my first high school Java class that I truly discovered the power of coding - programming offers the ultimate creative freedom and enables profound problem-solving capabilities.</p>
-                <p>I'm passionate about developing technology that helps people and propels society forward meaningfully. I believe in not just chasing dreams but catching them, and I'm excited to continue pushing boundaries and exploring new opportunities to create meaningful impact through technology.</p>
+                <p>I'm a dreamer — the kind who dreams big and chases those dreams with relentless dedication. My journey into tech began in digital sandboxes, where I found freedom in creativity and the thrill of building worlds from scratch. But it wasn't until my first high school Java class that I realized just how powerful programming could be — not just as a tool, but as a language for solving problems, expressing ideas, and shaping the future.</p>
+                <p>Since then, I've been driven by the belief that technology, when used intentionally, can create deep, lasting impact. I'm passionate about developing tools and systems that help people, uplift communities, and move society forward. Whether it's through AI, robotics, or thoughtful user experiences, I'm always searching for ways to turn bold ideas into real-world change.</p>
+                <p>I don't just chase dreams — I build the systems to catch them. And I'm just getting started.</p>
                 <div class="contact-info">
                     <button class="contact-button download-cv" type="button">DOWNLOAD RESUME</button>
                 </div>
@@ -123,9 +124,25 @@
                             <div class="duration-tooltip">AbbVie Technology Intern (Current)</div>
                         </div>
                         
-                        <!-- Leadership Positions -->
-                        <div class="duration-bar leadership" style="left: 25%; width: 75%; bottom: 65px;">
-                            <div class="duration-tooltip">Various Leadership Roles</div>
+                        <!-- Code Your Dreams - April 2024 (single event) -->
+                        <div class="duration-bar leadership" style="left: 44%; width: 1%; bottom: 105px;">
+                            <div class="duration-tooltip">Code Your Dreams Ideathon</div>
+                        </div>
+                        <!-- Flourish Conference - May 2023 to Sep 2023 -->
+                        <div class="duration-bar leadership" style="left: 20%; width: 12%; bottom: 85px;">
+                            <div class="duration-tooltip">Flourish Open-Source Conference</div>
+                        </div>
+                        <!-- MadHacks Organizer - Sep 2023 to Feb 2024 -->
+                        <div class="duration-bar leadership" style="left: 32%; width: 15%; bottom: 95px;">
+                            <div class="duration-tooltip">MadHacks Organizer</div>
+                        </div>
+                        <!-- LOGICA Community Chair - July 2023 to May 2024 -->
+                        <div class="duration-bar leadership" style="left: 25%; width: 22%; bottom: 75px;">
+                            <div class="duration-tooltip">LOGICA Community Chair</div>
+                        </div>
+                        <!-- WiCS Newsletter Chair - May 2023 to May 2024 -->
+                        <div class="duration-bar leadership" style="left: 20%; width: 25%; bottom: 65px;">
+                            <div class="duration-tooltip">WiCS Newsletter Chair</div>
                         </div>
                     </div>
                 </div>
