--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>About me</h2>
                 <p>I'm a dreamer — the kind who dreams big and chases those dreams with relentless dedication. My journey into tech began in digital sandboxes, where I found freedom in creativity and the thrill of building worlds from scratch. But it wasn't until my first high school Java class that I realized just how powerful programming could be — not just as a tool, but as a language for solving problems, expressing ideas, and shaping the future.</p>
                 <p>Since then, I've been driven by the belief that technology, when used intentionally, can create deep, lasting impact. I'm passionate about developing tools and systems that help people, uplift communities, and move society forward. Whether it's through AI, robotics, or thoughtful user experiences, I'm always searching for ways to turn bold ideas into real-world change.</p>
-                <p>I don't just chase dreams — I build the systems to catch them. And I'm just getting started.</p>
+                <p class="quote"><em>"All our dreams can come true, if we have the courage to pursue them."</em> — <em>Walt Disney</em></p>
                 <div class="contact-info">
                     <button class="contact-button download-cv" type="button">DOWNLOAD RESUME</button>
                 </div>
