--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <section id="portfolio" class="portfolio">
         <div class="portfolio-container fade-in">
             <div class="subtitle" id="some-of-my-recent-work">SOME OF MY RECENT WORK</div>
-            <h2>Portfolio</h2>
+            <h2>Projects</h2>
             
             <div class="portfolio-carousel">
                 <div class="portfolio-track" id="portfolio-track">
