update style and content

--- a/education.html
+++ b/education.html
@@ -185,6 +185,11 @@
 
         .coursework-section {
             padding: 4rem 5%;
+            background: white;
+        }
+
+        .transfer-highlights {
+            padding: 4rem 5%;
             background: #f8f9fa;
         }
 
@@ -338,7 +343,7 @@
 
         .academic-projects {
             padding: 4rem 5%;
-            background: white;
+            background: #f8f9fa;
         }
 
         .projects-grid {
@@ -655,7 +660,7 @@
     <section id="course-projects" class="academic-projects">
         <div class="coursework-container fade-in">
             <div class="section-header">
-                <div class="subtitle">STANDOUT ACADEMIC WORK</div>
+                <div class="subtitle">Selected Course Projects</div>
                 <h2>Course Projects</h2>
             </div>
 
@@ -767,7 +772,7 @@
     <section id="coursework" class="coursework-section">
         <div class="coursework-container fade-in">
             <div class="section-header">
-                <div class="subtitle">COMPREHENSIVE TECHNICAL FOUNDATION</div>
+                <div class="subtitle">Technical Foundation</div>
                 <h2>Coursework</h2>
             </div>
 
@@ -888,7 +893,7 @@
                         <li class="course-item">
                             <span class="course-name">Honors Yiddish Literature and Culture</span>
                             <span class="course-code">GERMAN 279</span>
-                            <span class="course-grade">A-</span>
+                            <span class="course-grade">A</span>
                         </li>
                         <li class="course-item">
                             <span class="course-name">Honors Intro to Political Theory</span>
@@ -907,6 +912,27 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- Transfer Credits & Transcript Highlights -->
+    <section class="transfer-highlights">
+        <div class="coursework-container fade-in">
+            <div class="section-header">
+                <div class="subtitle">Transfer Credits</div>
+                <h2>Transfer Credits &amp; Selected Grades</h2>
+            </div>
+
+            <div class="course-category">
+                <h3>Transfer Credit (University of Illinois at Chicago)</h3>
+                <p><strong>Applied Toward:</strong> General Course - BS Degree (Computer Sciences)</p>
+                <p><strong>Transfer Course Totals:</strong> 72.00 credits</p>
+                <ul class="course-list">
+                    <li class="course-item"><span class="course-name">COMP SCI 200 / 300 / 400 (Programming I/II/III)</span></li>
+                    <li class="course-item"><span class="course-name">MATH 221, 222, 234, 240, 340 (Calculus &amp; Linear Algebra / Discrete Math)</span></li>
+                    <li class="course-item"><span class="course-name">PHYSICS 201 (General Physics)</span></li>
+                    <li class="course-item"><span class="course-name">Various elective credits applied toward degree requirements</span></li>
+                </ul>
             </div>
         </div>
     </section>
