added banners to leadership

--- a/education.html
+++ b/education.html
@@ -901,14 +901,24 @@
                             <span class="course-grade">A</span>
                         </li>
                         <li class="course-item">
-                            <span class="course-name">Honors General Chemistry</span>
+                            <span class="course-name">Accelerated General Chemistry</span>
                             <span class="course-code">CHEM 109</span>
-                            <span class="course-grade">A</span>
+                            <span class="course-grade">N/A</span>
                         </li>
                         <li class="course-item">
                             <span class="course-name">Honors Intro to Biology</span>
                             <span class="course-code">BIO 153</span>
                             <span class="course-grade">A</span>
+                        </li>
+                        <li class="course-item">
+                            <span class="course-name">Honors Operating Systems</span>
+                            <span class="course-code">CS 537</span>
+                            <span class="course-grade">N/A</span>
+                        </li>
+                        <li class="course-item">
+                            <span class="course-name">Accelerated Honors Computer Graphics</span>
+                            <span class="course-code">CS 559</span>
+                            <span class="course-grade">AB</span>
                         </li>
                     </ul>
                 </div>
