--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
             <h2>Leadership & Extracurriculars</h2>
             <div class="leadership-grid">
                 <article class="leadership-item">
-                    <div class="leadership-header">
+                    <div class="leadership-header" style="background-image: url('images/madhacks banner.png'); background-size: cover; background-position: center;">
                         <img src="images/madhacks logo.jpeg" alt="MadHacks logo" class="leadership-logo">
                     </div>
                     <div class="leadership-content">
@@ -701,7 +701,7 @@
                 </article>
 
                 <article class="leadership-item">
-                    <div class="leadership-header">
+                    <div class="leadership-header" style="background-image: url('images/logica banner.avif'); background-size: cover; background-position: center;">
                         <img src="images/logicalogo.png" alt="LOGICA logo" class="leadership-logo">
                     </div>
                     <div class="leadership-content">
@@ -731,7 +731,7 @@
                 </article>
 
                 <article class="leadership-item">
-                    <div class="leadership-header">
+                    <div class="leadership-header" style="background-image: url('images/wics banner.jpeg'); background-size: cover; background-position: center;">
                         <img src="images/wics logo.png" alt="WiCS logo" class="leadership-logo">
                     </div>
                     <div class="leadership-content">
@@ -761,8 +761,8 @@
                 </article>
 
                 <article class="leadership-item">
-                    <div class="leadership-header">
-                        <img src="images/sparkhacks-logo.png" alt="SparkHacks logo" class="leadership-logo">
+                    <div class="leadership-header" style="background-image: url('images/sparkhacks.jpeg'); background-size: cover; background-position: center;">
+                        <img src="images/sparkhacks.gif" alt="SparkHacks logo" class="leadership-logo">
                     </div>
                     <div class="leadership-content">
                         <div class="leadership-title-section">
@@ -791,7 +791,7 @@
                 </article>
 
                 <article class="leadership-item">
-                    <div class="leadership-header">
+                    <div class="leadership-header" style="background-image: url('images/code your dreams banner.jpeg'); background-size: cover; background-position: center;">
                         <img src="images/code your dreams logo.jpeg" alt="Code Your Dreams logo" class="leadership-logo">
                     </div>
                     <div class="leadership-content">
